fix project section overflow

--- a/desktop.css
+++ b/desktop.css
@@ -62,7 +62,7 @@
     display: flex;
     width: 100%;
     padding: 24px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   .project-img {
